--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script>
+    <!-- <script>
       var term = new Terminal();
       term.open(document.getElementById('terminal'));
       term.write('Hello from \x1B[1;3;31mxterm.js\x1B[0m $ ')
-    </script>
+    </script> -->
   </body>
 </html>
